--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
     "swiper": "^11.2.6",
