--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.8.4",
     "lucide": "^0.503.0",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
@@ -18,6 +19,8 @@
     "react-dropzone": "^14.3.8",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.4"
   },
